# mosaicMPI

./: .gitignore  .readthedocs.yaml  CLI.md  LICENSE  README.md  README.rst  config.toml  setup.cfg  test.ipynb
_static/img/: logo.ai
docs/: readthedocs_env.yml
docs/_static/img/: logo.ai  logo_only.ai
docs/source/: api.md  api.rst  classes.rst  conf.py  index.md  index.rst  plotting.rst  tutorials.md  visualization.md
docs/source/classes/: dataset.rst  integration.rst  sns.rst
docs/source/tutorials/: cli-factorization.md  cli-geneset-analysis.md  cli-integration-configuration.md  cli-integration.md  cli-workflow.md  cli_integration-configuration.md  configtoml.md  getting-started.ipynb  python-factorization.ipynb  python-integration.ipynb  rank.md
example/: diamandis.h5ad  example.ipynb  tutorial.ipynb
example/diamandis_data/: diamandis_nobulk.txt
scripts/: cnmfdir_to_h5.py  cnmfdir_to_h5ad.py  cnmfdir_to_h5mu.py  example_config.toml  example_config_missingcolors.toml  quicktest_config.toml  slurm.sh  slurm_factorize.sh  slurm_postprocess.sh
src/cnmfsns/: __init__.py  cli.py  cnmf.py  cnmfsns.py  colors.py  config.py  containers.py  core.py  dataset.py  diagnostic_plots.py  integration.py  io.py  odg.py  plots.py  sns.py  utils.py
src/mosaicmpi/: __init__.py  biomart.py  cli.py  cnmf.py  colors.py  config.py  dataset.py  genesets.py  gprofiler.py  integration.py  nancorrmp.py  network.py  orphan.py  plots.py  sns.py  utils.py
src/nmfsns/: __init__.py  containers.py  nmfsns.py
tutorial/: CLI.md  tutorial.ipynb  tutorial_1.ipynb
tutorial/cptac_data/: cptac_RNA.metadata.txt  cptac_snRNA_subsampled.metadata.txt
tutorial/diamandis_data/: diamandis_nobulk.metadata.txt
tutorial_data/: cptac_protein.metadata.txt
