[metadata]
name = mosaicmpi
version = 2.4.2
author = Ted Verhey
author_email = tbverhey@ucalgary.ca
description = mosaicMPI: Mosaic Multi-resolution Program Integration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MorrissyLab/mosaicMPI
project_urls =
    Bug Tracker = https://github.com/MorrissyLab/mosaicMPI/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    anndata >= 0.8.0
    seaborn
    statsmodels
    networkx
    pandas
    numpy
    scipy >= 1.9.0
    matplotlib
    upsetplot
    tomli
    tomli-w
    distinctipy
    click
    pygraphviz
    igraph
    pyyaml
    scikit-learn
    fastcluster
    scanpy
    tqdm
    
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mosaicmpi = mosaicmpi.cli:cli