[metadata]
name = mosaicmpi
version = 2.5.4
author = Ted Verhey
author_email = tbverhey@ucalgary.ca
description = mosaicMPI: Mosaic Multi-resolution Program Integration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MorrissyLab/mosaicMPI
project_urls =
    Bug Tracker = https://github.com/MorrissyLab/mosaicMPI/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    anndata >= 0.8.0
    click
    distinctipy
    fastcluster
    igraph
    matplotlib
    networkx
    numpy
    pandas
    pygraphviz
    pyyaml
    requests
    scikit-learn
    scipy >= 1.9.0
    seaborn
    statsmodels
    tomli
    tomli-w
    tqdm
    upsetplot
    
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mosaicmpi = mosaicmpi.cli:cli